--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,11 @@
 plugins {
     id 'java'
     id 'io.quarkus'
-    id "org.jetbrains.kotlin.jvm" version "1.5.31"
-    id "org.jetbrains.kotlin.plugin.allopen" version "1.5.31"
+    id "org.jetbrains.kotlin.jvm" version "1.6.0"
+    id "org.jetbrains.kotlin.plugin.allopen" version "1.6.0"
+
+    id("com.github.ben-manes.versions") version "0.39.0"
+
 }
 
 repositories {
@@ -11,7 +14,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.31'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.0'
     implementation 'io.quarkus:quarkus-kotlin'
 
     implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
